Fixed some issues from blog cards and navigation mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,7 @@ html {
     @apply transition-all duration-500;
   }
 }
+
+.active {
+  @apply text-[#FF5D56] font-bold;
+}
